Rework a bit item editor, fix display on mobile,

--- a/src/app/item-template/item-template-editor-module.component.scss
+++ b/src/app/item-template/item-template-editor-module.component.scss
@@ -14,10 +14,19 @@ mat-card {
     justify-content: space-between;
     mat-checkbox {
         flex: 0 0 120px;
-        min-width: 120px;
+        min-width: 200px;
     }
 }
 
 .input-center-align {
     text-align: center;
+}
+
+.damage-line {
+    display: grid;
+    grid-template-columns: 60px minmax(50px, 90px) minmax(90px, 1fr);
+    grid-gap: 16px;
+    > mat-form-field {
+        width: 100%;
+    }
 }
